# draughts_p2p

./: .gitignore  CMakeLists.txt  README.md
config/: default.conf
scripts/: clean_experiment.sh  gen_configs.py  install_deps.sh  replay_initiator_trace.py  run_nodes.sh  send_neighbors.py  stop_nodes.sh  topology_collector.py
src/: app_packet.cpp  app_packet.hpp  base64.cpp  base64.hpp  cipher.cpp  cipher.hpp  ciplc.cpp  ciplc.hpp  cli.cpp  cli.hpp  config.cpp  config.hpp  console.cpp  console.hpp  draughts_app.cpp  draughts_app.hpp  draughts_packet.hpp  io_layer.cpp  io_layer.hpp  logger.cpp  logger.hpp  main.cpp  node.cpp  node.hpp  overlay.cpp  overlay.hpp  protocol.cpp  protocol.hpp  tlv.cpp  tlv.hpp  util.hpp  view.cpp  view.hpp
src/crypto/: Crypto.cpp  Crypto.h
